Fixed small inline flex alignment issue for Expandable arrow

--- a/packages/bvaughn-architecture-demo/components/Expandable.module.css
+++ b/packages/bvaughn-architecture-demo/components/Expandable.module.css
@@ -23,7 +23,7 @@
   width: 1em;
   height: 1em;
   margin-right: 0.5ch;
-  display: inline-block;
+  display: inline-flex;
 }
 .ArrowExpanded {
   transform: rotate(90deg);
