--- a/packages/bvaughn-architecture-demo/components/search-files/ResultsListRow.module.css
+++ b/packages/bvaughn-architecture-demo/components/search-files/ResultsListRow.module.css
@@ -61,7 +61,3 @@
   color: var(--color-dim);
   font-size: var(--font-size-small);
 }
-
-.Expandable {
-  display: block;
-}
